.k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tombalator
  labels:
    name: tombalator
