.k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tombalator-server
  namespace: tombalator
  labels:
    app: tombalator-server
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: tombalator-server
