.k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tombalator-frontend
  namespace: tombalator
  labels:
    app: tombalator-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tombalator-frontend
